# pit1

./: .replit  app.py  create_complete_offline_app.py  deploy_to_pythonanywhere.py  ethical_hacking_tutorial.db  pyproject.toml  replit.md  routes.py
deployment_package/: app.py  config.py  models.py  pythonanywhere_deployment.md  requirements_pythonanywhere.txt  wsgi.py
deployment_package/static/: manifest.json
deployment_package/templates/: lesson2.html  lesson4.html  lesson7.html  lesson9.html
instance/: ethical_hacking_tutorial.db
offline_app/: README.md  index.html  manifest.json  sw.js
offline_app/css/: custom.css  mobile-app.css  responsive.css
offline_app/js/: app.js  mobile-app.js  offline-app.js  responsive.js
offline_app/templates/: base.html  lesson3.html  lesson4.html  lesson8.html
static/: manifest.json  sw.js
static/css/: custom.css  mobile-app.css
static/js/: mobile-app.js
templates/: base.html  index.html  lesson1.html  lesson10.html  lesson4.html  lesson5.html  lesson6.html  lesson7.html
